unified_tests/file_roles/group_declaration_in_library_file/expect/build.text.stderr
lib.copp:1:1: error: group declarations are only allowed in .test.copp files
  group "g" {}
  ^
